// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render default 1`] = `
<li
  className="section-header"
>
  <h1
    aria-expanded={true}
    aria-level={1}
    className="title"
    role="heading"
  >
    test
  </h1>
</li>
`;

exports[`should render with callback functions 1`] = `
<li
  className="section-header is-collapsible"
  data-item-show-focus="true"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  tabIndex="0"
>
  <div
    className="start"
  >
    <span
      className="accordion-icon is-open"
    />
  </div>
  <div
    className="fill"
  >
    <h1
      aria-expanded={true}
      aria-level={1}
      className="title"
      role="heading"
    >
      test
    </h1>
  </div>
</li>
`;

exports[`should render with isCollapsed 1`] = `
<li
  className="section-header"
>
  <h1
    aria-expanded={false}
    aria-level={1}
    className="title"
    role="heading"
  >
    test
  </h1>
</li>
`;

exports[`should render with isCollapsible 1`] = `
<li
  className="section-header is-collapsible"
  data-item-show-focus="true"
  onBlur={[Function]}
  onMouseDown={[Function]}
  tabIndex="0"
>
  <div
    className="start"
  >
    <span
      className="accordion-icon is-open"
    />
  </div>
  <div
    className="fill"
  >
    <h1
      aria-expanded={true}
      aria-level={1}
      className="title"
      role="heading"
    >
      test
    </h1>
  </div>
</li>
`;

exports[`should render with level 1`] = `
<li
  className="section-header"
>
  <h3
    aria-expanded={true}
    aria-level={3}
    className="title"
    role="heading"
  >
    test
  </h3>
</li>
`;
